# tg_cpp_app

./: .gitignore  CMakeLists.txt  README.md
src/: def.hpp  main.cpp  td_test.binlog
src/auth/: auth.cpp  auth.hpp
src/client/: client.cpp  client.hpp
src/tools/: tools_def.hpp
src/tools/file/: file.cpp  file.hpp
src/tools/file/json/: json.cpp  json.hpp
